config for DB migrations

--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "generate-graphql-definitions": "npx ts-node src/graphql/graphql-typings.config.ts",
+    "create-migration": "npm run typeorm -- migration:create --config src/config/migration.config.ts -n",
+    "run-migrations": "npm run typeorm -- migration:run --config src/config/migration.config.ts",
+    "generate-migrations": "npm run typeorm -- migration:generate --config src/config/migration.config.ts -n",
+    "rollback-migration": "npm run typeorm -- migration:revert --config src/config/migration.config.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
