--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "ts-morph": "^12.0.0",
     "typeorm": "^0.2.38",
     "typeorm-naming-strategies": "^2.0.0"
   },
