--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "generate-graphql-definitions": "npx ts-node src/graphql/graphql-typings.config.ts",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "create-migration": "npm run typeorm -- migration:create --config src/config/migration.config.ts -n",
     "run-migrations": "npm run typeorm -- migration:run --config src/config/migration.config.ts",
-    "generate-migrations": "npm run typeorm -- migration:generate --config src/config/migration.config.ts -n",
+    "generate-migrations": "npm run typeorm -- migration:generate --config src/config/migration.config.ts -n InitailMigrations",
     "rollback-migration": "npm run typeorm -- migration:revert --config src/config/migration.config.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
