--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "rxjs": "^7.2.0",
     "ts-morph": "^12.0.0",
     "typeorm": "^0.2.38",
-    "typeorm-naming-strategies": "^2.0.0"
+    "typeorm-naming-strategies": "^2.0.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
